# Yadviga-SLAM

./: .gitignore  CMakeLists.txt  CMakePost.js  LICENSE  README.md  SLAM_PIPELINE_GRAPH.md  THIRD-PARTY-LICENSES.md
core/: Initialize.cpp  Mapping.cpp  RenderFrames.js  Rendering.cpp  Sensors.cpp  Tracking.cpp
include/: Initialize.h  Renderer.h  Tracking.h  slam_init.h
resources/: logo.svg.h.in
src/: Initialize.cpp  LoopClosure.cpp  Mapping.cpp  Renderer.cpp  Rendering.cpp  Tracking.cpp  slam_init.cpp  tracking.cpp
web/: dev-desktop.js  dev-tool-analyzer.html  dev-tool-analyzer.js  dev-tool-cache.js  dev-tool-camera.js  dev-tool-console.js  dev-tool-recorder.html  dev-tool-recorder.js  dev-tool-sensors.js  dev-tool-tracking.js  get-access.js  index-8wall.html  index.html  main.js  render-frame-cpu.js  render-frame-gpu.js  screen-recorder.js  slam_init.js  test-camera-out.js  test-camera.js  test-clear-cache.js  test-console.js  test-fps.js  test-grid-babylon.js  test-grid-three.js  test-mapping-babylon.js  test-mapping-three.js  test-mapping.js  test-sensors.js  test-three.js  test-tracking.js  three-cube.js  three.js  touch-cursor.js  yadviga-slam.js
web/models/: phone.glb
